--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Your Name <you@example.com>"]
 python = "^3.8"
 pandas = "^1.1.3"
 numpy = "^1.19.4"
+tqdm = "^4.27.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
